# SmartFileOrganizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: benchmark.py
src/: run.py
src/smart_file_organizer/: container.py
src/smart_file_organizer.egg-info/: PKG-INFO  SOURCES.txt
src/smart_file_organizer/cli/: main.py
src/smart_file_organizer/core/: entities.py  rules.py
src/smart_file_organizer/infra/: fs_dryrun.py  fs_real.py  hashing.py  interfaces.py
src/smart_file_organizer/use_cases/: dedupe.py  organizer.py  scanner.py
tests/: test_cli.py  test_container.py  test_dedupe.py  test_infra.py  test_integration.py  test_main.py  test_organizer_extended.py  test_rules.py  test_scanner.py
