[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_file_organizer"
version = "0.1.0"
authors = [{name = "RoswellCityUk", email = "93608245+RoswellCityUK@users.noreply.github.com"}]
description = "An intelligent, automated file organization agent with architectural safety."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
smart-organizer = "smart_file_organizer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
